--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <main>
         <h1 class="red">Seu marketplace de coleta de resíduos</h1>
         <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
-        <a href="#"><span></span><strong>Pesquisar pontos de coleta</strong></a>
+        <a href="create-point.html"><span></span><strong>Pesquisar pontos de coleta</strong></a>
       </main>
       
     </div>
