Adicionada seleção e inserção dos itens no JS

--- a/create-point.html
+++ b/create-point.html
@@ -92,8 +92,9 @@
           <li data-id="6"><img src="assets/oleo.svg" alt="Óleo de Cozinha">
             <span>Óleo de Cozinha</span>
           </li>
-
         </div>
+
+        <input type="hidden" name="items">
       </fieldset>
 
       <button type="submit">Cadastrar Ponto de Coleta</button>
