--- a/create-point.html
+++ b/create-point.html
@@ -9,6 +9,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="styles/create-point.css">
   <link rel="stylesheet" href="styles/responsive.css">
+  <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
 </head>
 
 <body>
